* Fixed: unit hp statistics being too small on higher scale than 1.0.

--- a/trunk/MobileClient/www/Assets/Render/Placeables.css
+++ b/trunk/MobileClient/www/Assets/Render/Placeables.css
@@ -8,5 +8,18 @@
 	position: absolute;
 	top: 10px;
 	left: 14px;
+	font-size: 16px;
 	color: darkred;
+}
+
+.asset-scale-2 .unit_health
+{
+	left: 18px;
+	font-size: 32px;
+}
+
+.asset-scale-3 .unit_health
+{
+	left: 26px;
+	font-size: 48px;
 }
